--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.0",
-    "@supabase/supabase-js": "^2.0.0",
-    "gltf-pipeline": "^4.0.0"
+    "@supabase/supabase-js": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
